@@ -43,6 +43,10 @@
   <xsl:call-template name="inline.boldseq"/>
 </xsl:template>
 
+<xsl:template match="property">
+  <xsl:call-template name="inline.monoseq"/>
+</xsl:template>
+
 <xsl:variable name="use.id.as.filename">1</xsl:variable>
 
 <xsl:variable name="shade.verbatim">1</xsl:variable>
